# test_system

./: parameters.json
Run_PHocr_test/: compare_result.json  memory_test_result.json
Run_PHocr_test/Mekong/: README.md
Run_PHocr_test/Mekong/docs/: clone-database.txt  setup-build-env-for-windows7-32-bit.txt  setup-test-env-for-windows-vm.txt  start-ocr3-master.txt
Run_PHocr_test/Mekong/server/: README.md
Run_PHocr_test/Mekong/test/: test_all.py  test_base.py
Run_PHocr_test/Mekong/utilities/: __init__.py
Run_PHocr_test/PHOcr_C2404_D3_linux_memory/lib/: libboost_regex.so.1.70.0  libgomp.so.1  libtiff.so.4
Run_PHocr_test/PHOcr_C2404_D3_linux_memory/phocrexamples/: Makefile
Run_PHocr_test/PHOcr_C2404_D3_linux_memory/phocrexamples/phocrtests/: CMakeLists.txt  TestBarcode_BarcodeCheckDigitForOneD.cpp  TestBarcode_BarcodeStartStopCodeOfCode39.cpp  TestBarcode_PostnetBarcodeDetection.cpp  TestDataManager.cpp  TestDataManager.h  TestDecompressAndCacheTrainedDataInMeMory_Feature.cpp  TestPHOcrAPI_BarcodeCheckDigitForOneD.cpp  TestPHOcrAPI_BarcodeSupplementalCode.cpp  TestPHOcrDocument_Constructor.cpp  TestPHOcrDocument_GetNumberOfPages.cpp  TestPHOcrDocument_GetPage.cpp  TestPHOcrDocument_Process.cpp  TestPHOcrDocument_SetCancelDecisionMethod.cpp  TestPHOcrPageData_GetPageContent.cpp  TestPHOcrSetting_OCRMultiPagesInParallel.cpp  TestPHOcrSetting_SetAndGetIccSourceProfile.cpp  TestPHOcrSettingsSetGetDPI.h  TestPHOcrSettings_Set_Get_PHOcrWorkingDirectory.cpp  TestPHOcrSettings_Set_Get_PHOcrWorkingDirectory.h  UnitTestBarcodeUtility.cpp
Run_PHocr_test/PHOcr_C2404_D3_linux_release/lib/: libboost_filesystem.so.1.70.0  libboost_iostreams.so.1.70.0  libboost_locale.so.1.70.0  libboost_system.so.1.70.0  libjpeg.so.62  libstdc++.so.6
Run_PHocr_test/TESTS_memory/Memcheck_06_3BillsCondensed01_page_0002/: spec.json
Run_PHocr_test/TESTS_memory/Memcheck_BUG_28360_fc-Page0001/: spec.json
Run_PHocr_test/TESTS_release/FULL_COLOR_30_PAGES/: spec.json
Run_PHocr_test/TESTS_release/UNIT_TEST_PHOCR_CANCELLATION/: spec.json
Run_PHocr_test/backup/: memory_test_result.json  release_test_result.json
test/: compare_result.json  memory_test_result.json  release_test_result.json  test_result.json
test/test_results_ocr2/log/: performance_data_ocr2.json  system_info.json
test_results_ocr2/linux/: compare_result.json  test_result.json
utilities/analysis/: report_detail_accuracy.py
utilities/analysis/detail_report/: calculator.py  character-class.txt  counter.py  data_parser.py  detail_reporter.py  (+1 more)
utilities/backup/: database_backup.sh  gerrit_backup.sh  jenkins_backup.sh
utilities/baseapi/: excel_style.py  linux_file_access.py  network_base.py
utilities/configs/: board.py  command.py  commit_message.py  common.py  compare_result.py  database.py  test_result.py  timeout.py  virtual_manager.py  workspace.py
utilities/database/: clone_database_main.py
utilities/handlers/: change_build_number_mapping_handler.py  current_version_handler.py  distribution_handler.py  test_spec_handler.py
utilities/jenkins/: prepare_release_build_packages.py  stop-all-pending-jobs.txt  update_delta_version_projects.py  update_reference_data_post_integration.py
utilities/manager/: it_to_post_process_remover.py  workspace_manager.py
utilities/other/: compare_two_patch_set.py  create_phocr_testcase.py  profile_validator.py  update_image_ground_client.py
utilities/performance_analysis/: requirements.txt  test_distribution.py
utilities/performance_for_it/: run_it_perf.py
utilities/report/: report_barcode.py  report_delta_bb_accuracy.py  report_mem_peak_infomation.py  report_memory_peak_tsv.py  report_text_accuracy.py
utilities/send_email/: SMTPEmail.py  configure
utilities/svn_manager/: add_accuracy_to_svn.py  update_change_log.py
utilities/tests/: README.md  combine_all_mem_peak.py  run_all.py  run_one.py
utilities/utils/: paramiko_helper.py
utilities/validate/: validate_commit_message.py  validate_specification_file.py
(+852 files in other folders)
